feat: change put in post
