# docs/api.yml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: STD22098 - STD22106
 servers:
-  - url: https://www.test.com
+  - url: http://localhost:8080
 tags:
   - name: User 
   - name: Account
@@ -18,10 +18,6 @@ paths:
       summary: get all users 
       description: This will return a list of user
       operationId: getUsers
-      parameters:
-        - in: query
-          name: queryPagination
-          $ref: '#/components/parameters/queryPagination'
       responses:
         '200':
           $ref: '#/components/responses/UserListSuccess'
@@ -44,11 +40,11 @@ paths:
           $ref: '#/components/responses/UserSuccess'
 
   /user:
-    put:
+    post:
       tags:
         - User
-      summary: Create or update a user
-      operationId: CrupdateUser
+      summary: Create new user
+      operationId: CreateUser
       requestBody:
         content:
           application/json:
@@ -109,11 +105,11 @@ paths:
           $ref: '#/components/responses/AccountSuccess'
 
   /account:
-    put:
+    post:
       tags:
         - Account
-      summary: Create or update an account
-      operationId: CrupdateAccount
+      summary: Create new account
+      operationId: CreateAccount
       requestBody:
         content:
           application/json:
@@ -174,11 +170,11 @@ paths:
           $ref: '#/components/responses/TransactionSuccess'
 
   /transaction:
-    put:
+    post:
       tags:
         - Transaction
-      summary: Create or update a transaction 
-      operationId: CrupdateTransaction
+      summary: Create a transaction 
+      operationId: CreateTransaction
       requestBody:
         content:
           application/json:
@@ -239,11 +235,11 @@ paths:
           $ref: '#/components/responses/DeviseSuccess'
 
   /devise:
-    put:
+    post:
       tags:
         - Devise 
-      summary: Create or update a devise 
-      operationId: CrupdateDevise
+      summary: Create a devise 
+      operationId: CreateDevise
       requestBody:
         content:
           application/json:
